fix aside z-index

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -167,6 +167,7 @@ body.rtl {
   -webkit-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
+  z-index: 99;
 }
 
 .rtl #aside {
