--- a/assets/scss/_aside.scss
+++ b/assets/scss/_aside.scss
@@ -7,6 +7,7 @@
     -webkit-transition: all .2s;
     -o-transition: all .2s;
     transition: all .2s;
+    z-index: 99;
 }
 
 .rtl {
